--- a/configuration.properties
+++ b/configuration.properties
@@ -2,23 +2,23 @@
 browser=chrome
 
 --url--
-urlLink=https://qa.hectorware.com/index.php/login
+urlLink=https://qa.hectorware.com//login
 
 --credentials--
-username=Employee1
-password=Employee123
+username=pl
+password=loy
 
 url=http://library1.cybertekschool.com/
 #username and passwords
-librarian_email=librarian180@library
-librarian_password=libraryUser
-student_email=student368@library
-student_password=libraryUser
+librarian_email=li@library
+librarian_password=lier
+student_email=tu@library
+student_password=iy
 #database info
-qa1.library.url=jdbc:mysql://34.230.35.214:3306/library1
+qa1.library.url=jdbc:mysql://............
 qa1.library.username=library1_client
 qa1.library.password=WVF4NdGXCKHeE6VQ
 #qa2 connection info
-qa2.library.url=jdbc:mysql://34.230.35.214:3306/library2
-qa2.library.username =library2_client
-qa2.library.password=6s2LQQTjBcGFfDhY
+qa2.library.url=jdbc:mysql://.........
+qa2.library.username =iu
+qa2.library.password=uooo8o7t6k5ku
